force-app/main/default/objects/Zuora_Bulk_Process__c/Zuora_Bulk_Process__c.object-meta.xml
<CustomObject>
    <label>Zuora Bulk Process</label>
    <nameField>
        <displayFormat>ZB-{0000000}</displayFormat>
        <label>Zuora Bulk Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zuora Bulk Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>