force-app/main/default/objects/Zuora_Bulk_Process__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <label>Status Message</label>
    <type>TextArea</type>
</CustomField>