force-app/main/default/objects/Zuora_Bulk_Process__c/fields/zObject_Type__c.field-meta.xml
<CustomField>
    <fullName>zObject_Type__c</fullName>
    <label>zObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>