force-app/main/default/objects/Zuora_Bulk_Process__c/fields/Zuora_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Id__c</fullName>
    <label>Zuora Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>